fixed contacts, phone wrap

--- a/src/styles/media.scss
+++ b/src/styles/media.scss
@@ -421,8 +421,8 @@
     font-weight: 400;
     margin-bottom: 10px;
   }
-  .phone-wrapper {
-
+  .business-card__phone-wrapper {
+    white-space: nowrap;
     &:hover {
       transform: scale(1.1);
       transition: all 0.3s ease;
